fixed alignments

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -271,7 +271,7 @@
 	position: relative;
 	width:13%;
 	float:left;
-	top:7px;
+	top:2px;
 }
 
 #scorePanel {
